[project]
name = "paper-analysis-deepagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents==0.4.1",
    "fastapi>=0.116.1",
    "httpx>=0.27.0",
    "azure-storage-blob>=12.19.0",
    "PyJWT>=2.9.0",
    "langfuse>=3.0.0",
    "langchain-openai>=1.1.7",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.35.0",


]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "integration: live network/API integration tests (opt-in)",
]
